k8s/prod/5.ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  namespace: free-websockets-prod
  name: free-websockets-server-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/secure-backends: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/websocket-services: server_service
    nginx.org/websocket-services: server_service
spec:
  tls:
    - hosts:
        - site15.ru
      secretName: echo-tls
  rules:
    - host: site15.ru
      http:
        paths:
          - path: /free-websockets(/|$)(.*)
            backend:
              serviceName: server_service
              servicePort: 5000
